--- a/menu.scss
+++ b/menu.scss
@@ -22,6 +22,7 @@ $grey:#f1f1f1;
             position: relative;
             bottom: 50px;
             left: -50px;   
+            
         }
         h4{
             position: relative;
@@ -37,7 +38,35 @@ $grey:#f1f1f1;
         animation: pop-out 2s linear forwards,
                  ;
          
-        
+    }
+
+@mixin checksircle {
+        .item__check {
+           
+            background-color: #99e2d0;
+            position: absolute;
+            height: 100%;
+            width: 20%;
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: flex;
+             -webkit-box-pack: center;
+                 -ms-flex-pack: center;
+                     justify-content: center;
+             -webkit-box-align: center;
+                -ms-flex-align: center;
+                     align-items: center;
+            right: -20%;
+            animation: section ease 1s forwards;
+            display: none;
+          }
+          
+          .item__check i {
+            font-size: 40px;
+            color: white;
+            animation: check 1s ease forwards;
+          }
+    }
                   
         @keyframes pop-out {
             from{ opacity: 0;}
@@ -45,64 +74,45 @@ $grey:#f1f1f1;
         }  
         
         @keyframes check{
-            0%{
-                width: 0%;
+            from{
                 transform: rotate(0);
+                transform-origin: center;
             }
-            50%{
-                width: 10%;
-                transform: rotate(180deg);
-            }
-            100%{
-            width: 20%;
+           
+            to{
+            
             transform: rotate(360deg);
-               
+            transform-origin: center;  
             }
         }
 
-        @keyframes slide{
-            0%{
-                
-                transform: translateX(90%);
-                width: 0px;
-                height: 80px;
-                left: 100%;
-                border-radius: 0px 25px 25px 0px;
-                p{
-                    left: 10px;
-                }
-            }
-            50%{
-               
-                transform: translateX(80%); 
-                width: 50px;
-                height: 80px;
-                left: 80%;
-                border-radius: 0px 25px 25px 0px;
-                p{
-                    left: 10px;
-                }
-            }
-            100%{
-                
-                transform: translateX(70%);
-                width: 80px;
-                height: 80px;
-                left: 60%;
-                border-radius: 0px 25px 25px 0px;
-                p{
-                    left: 10px;
-                }
-            }
-        }
-    }
-
-@keyframes sectionshrink {
-    from{width:100% ;}
-    to{width: 80%;}
-}
  
-    
+        @keyframes section {
+    from{
+        width: 0px;
+        height: 80px;
+        left: 400px;
+        border-radius: 0px 25px 25px 0px;
+        background-color: $mint;
+        transform: scale(1);
+        
+        
+    }
+    to{
+        
+        width: 80px;
+        height: 80px;
+        left:321px;
+        border-radius: 0px 25px 25px 0px;
+        background-color: $mint;
+        transform: scale(1);
+        
+        
+        
+    }
+        }
+
+ 
 body{
     background-color: $grey;
 }
@@ -184,34 +194,30 @@ body{
 .section1{
     cursor: pointer;
     opacity:1; 
-        animation-delay  : 0.1s;
-     &:hover{
-        
-        .fa-check-circle{
-            position: absolute; 
-            
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: $mint;
-            color: white;
-            width: 18%;
-            transition: 3s ease ;
-            animation: slide linear 1s forwards,
-                       ;    
-        } 
-        
-        animation: sectionshrink linear 1s forwards;
+    position: relative;
+    display: flex;
+    animation-delay  : 0.1s;
+   
+        @include tab ;
      }
 
-                
-        @include tab
-        
+       @include checksircle ;
 
-        
-        
-    }
+       .section1:hover{
+        .item__check {
+            display: flex;
+          
+        }
+      .price{
+        margin-right: 4rem;
+      }
+      .text.p{
+        margin-right: 4rem;
+      }
+    
+       }
 
+       
 .section2{
     @include tab;
     opacity:0;
@@ -219,11 +225,43 @@ body{
    
 }
 
+@include checksircle ;
+
+       .section2:hover{
+        .item__check {
+            display: flex;
+          
+        }
+      .price{
+        margin-right: 4rem;
+      }
+      .text.p{
+        margin-right: 4rem;
+      }
+    
+       }
+
 .section3{
     @include tab;
     opacity: 0;
     animation-delay: 0.8s;
 }
+
+@include checksircle ;
+
+       .section3:hover{
+        .item__check {
+            display: flex;
+          
+        }
+      .price{
+        margin-right: 4rem;
+      }
+      .text.p{
+        margin-right: 4rem;
+      }
+    
+       }
 
 .section4{
     @include tab;
@@ -231,6 +269,22 @@ body{
     animation-delay: 1.2s;
 
 }
+
+@include checksircle ;
+
+       .section4:hover{
+        .item__check {
+            display: flex;
+          
+        }
+      .price{
+        margin-right: 4rem;
+      }
+      .text.p{
+        margin-right: 4rem;
+      }
+    
+       }
 
     .button {
         background-color:$grey;
