--- a/styles.scss
+++ b/styles.scss
@@ -1,8 +1,11 @@
 .body{
-    p{
+    
     font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+
+    
 }
-}
+
 $purple:#9356dc ;
 $pink:#ff79da;
 $mint:#99e2d0;
@@ -34,7 +37,7 @@ $grey:#f1f1f1;
                   
               }
               .fas.fa-hover-show {
-                color: $pink;
+                color:  $pink;
                 position: relative;
                 left: 80%;
                 bottom: 40px;
