--- a/menu.scss
+++ b/menu.scss
@@ -209,10 +209,12 @@ body{
           
         }
       .price{
-        margin-right: 4rem;
+        margin-right: 2rem;
+        
       }
-      .text.p{
-        margin-right: 4rem;
+      .p{
+        text-overflow: ellipsis;
+        overflow: hidden;
       }
     
        }
@@ -233,10 +235,11 @@ body{
           
         }
       .price{
-        margin-right: 4rem;
+        margin-right: 2rem;
       }
-      .text.p{
-        margin-right: 4rem;
+      .p{
+        text-overflow: ellipsis;
+        overflow: hidden;
       }
     
        }
@@ -255,10 +258,11 @@ body{
           
         }
       .price{
-        margin-right: 4rem;
+        margin-right: 2rem;
       }
-      .text.p{
-        margin-right: 4rem;
+      .p{
+        text-overflow: ellipsis;
+        overflow: hidden;
       }
     
        }
@@ -278,10 +282,11 @@ body{
           
         }
       .price{
-        margin-right: 4rem;
+        margin-right: 2rem;
       }
-      .text.p{
-        margin-right: 4rem;
+      .p{
+        text-overflow: ellipsis;
+        overflow: hidden;
       }
     
        }
