--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,28 @@
   font-weight: 500;
 }
 
+@-webkit-keyframes bar {
+  from {
+    -webkit-transform: scale(2);
+            transform: scale(2);
+  }
+  to {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes bar {
+  from {
+    -webkit-transform: scale(2);
+            transform: scale(2);
+  }
+  to {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
 h2 {
   padding: 20px;
 }
@@ -208,6 +230,8 @@ h2 {
   transition: -webkit-transform 450ms;
   transition: transform 450ms;
   transition: transform 450ms, -webkit-transform 450ms;
+  -webkit-animation: bar 2s ease forwards;
+          animation: bar 2s ease forwards;
   margin-bottom: 30px;
   line-height: 5px;
   -webkit-box-shadow: 5px 5px 5px #9b9898;
