--- a/menu.scss
+++ b/menu.scss
@@ -1,10 +1,10 @@
 
-title{
+
 $purple:#9356dc;
 $pink:#ff79da;
 $mint:#99e2d0;
 $grey:#f1f1f1;
-}
+
 
 @mixin tab {
     background-color:#ffff;
@@ -58,7 +58,7 @@ $grey:#f1f1f1;
              -webkit-box-align: center;
                 -ms-flex-align: center;
                      align-items: center;
-            right: -20%;
+            right: 120px;
             animation: section ease 1s forwards;
             display: none;
           }
@@ -93,7 +93,8 @@ $grey:#f1f1f1;
     from{
         width: 0px;
         height: 80px;
-        left: 400px;
+        display: flex;
+        right: 0px;
         border-radius: 0px 25px 25px 0px;
         background-color: $mint;
         transform: scale(1);
@@ -104,7 +105,7 @@ $grey:#f1f1f1;
         
         width: 80px;
         height: 80px;
-        left:321px;
+        right:00px;
         border-radius: 0px 25px 25px 0px;
         background-color: $mint;
         transform: scale(1);
@@ -224,6 +225,10 @@ body{
     
 
 .section2{
+    cursor: pointer;
+    opacity:1; 
+    position: relative;
+    display: flex;
     @include tab;
     opacity:0;
     animation-delay: 0.4s;
@@ -249,6 +254,10 @@ body{
        }
 
 .section3{
+    cursor: pointer;
+    opacity:1; 
+    position: relative;
+    display: flex;
     @include tab;
     opacity: 0;
     animation-delay: 0.8s;
@@ -272,6 +281,10 @@ body{
        }
 
 .section4{
+    cursor: pointer;
+    opacity:1; 
+    position: relative;
+    display: flex;
     @include tab;
     opacity: 0;
     animation-delay: 1.2s;
@@ -325,6 +338,17 @@ body{
                 }
     
 }
+
+
+@media (max-width: 350px)
+{
+  .section1,.section2,.section3,.section4{
+      width: 350px;
+      margin: 15px auto;
+  }
+}
+
+
   
 
         
