--- a/styles.scss
+++ b/styles.scss
@@ -174,7 +174,36 @@ $grey:#f1f1f1;
   } 
 }
 
+.spiner{
+    .loader{
+    border: 10px dotted #7a7979;
+    border-radius: 50%;
+    border-top: 10px solid yellow;
+    width: 200px;
+    height:200px;
+    position: absolute;
+    left: 40%;
+    right: 0%;
+    top:20%;
+    bottom: 0%;
+    
 
+    animation: spin 5s linear,
+               disaper 5s linear forwards,
+               disp 5s linear forwards;
+    }
+    
+    
+               
+                
+
+               animation: sectiona 5s ease ;
+
+            
+    
+
+   
+}
 
 h2{
     padding: 20px;
@@ -291,10 +320,10 @@ h2{
 }
 
 
-@media (min-width: 400px)
+@media (min-width: 375px)
 {
    .works{
-       width: 400px;
+       width: 375px;
        margin: 15px auto;
        .header2{
            h2{
@@ -305,7 +334,7 @@ h2{
    }
 
    .first{
-       width: 430px;
+       width: 400px;
    }
 
    .circle{
@@ -315,6 +344,84 @@ h2{
    }
 
    
-   
 
+   .first{
+       width: 375px;
+   }
+
+
+}
+
+
+@keyframes sectiona {
+    from{
+        
+    position:fixed;
+    padding:0;
+    margin:0;
+
+    top:0;
+    left:0;
+
+    width: 100%;
+    height: 100%;
+    background:rgba(0, 235, 235, 0.911);
+        
+        
+    }
+        
+        
+    
+    to{
+       
+    position:fixed;
+    padding:0;
+    margin:0;
+
+    top:0;
+    left:0;
+
+    width: 100%;
+    height: 100%;
+    background:rgba(0, 235, 235, 0.911);
+        
+        
+        
+        
+    }
+}
+
+@keyframes spin{
+    from{
+        transform: rotate(0deg);
+        
+        
+    }
+
+    to{
+        transform: rotate(360deg);
+        
+        
+    }
+}
+
+@keyframes disaper {
+    from{
+        opacity: 1;
+    }
+    to{
+        opacity: 0.0;
+    }
+}
+
+@keyframes disp {
+    from{
+        display:flex;
+        justify-content: center;
+        align-content: center;
+    }
+
+    to{
+        display: none;
+    }
 }
